<package>
 <name> pr2_joint_limit_check </name>
  <version>0.0.0</version>
  <description>
    Scripts for checking joint limits on PR2
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/pr2_joint_limit_check</url>
  <author>Francisco Vina</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
